# Granola

./: .gitignore  Cargo.toml  PKG-INFO  README.md  main.py  pyproject.toml  user-guide.md
examples/: hello_world.py
src/: http.rs  http_request.rs  lib.rs  libbbbb.rs  libbbbbbb.rs  net.rs
src/net/: mod.rs
tests/: __main__.py  class_gen.py
