[package]
name = "granola"
version = "1.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "granola"
crate-type = ["cdylib"]

[dependencies]
ctrlc = "3.2.5"
pyo3 = { version = "0.17.3", features = ["extension-module"] }
