[package]
name = "granola"
version = "1.0.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "granola"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.14", features = ["extension-module"] }
hyper = { version = "1.0.0-rc.3", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.2" 
pyo3-asyncio = { version = "0.14", features = ["attributes", "tokio-runtime"] }
async-trait = "0.1.68"
